--- a/CrmPackage/WebResources/Web Page (HTML)/arup_close_Opportunity.htm
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_close_Opportunity.htm
@@ -1,38 +1,36 @@
-﻿<html>
+﻿<html lang="en">
 <head>
-</head>
-<body onfocusout="parent.setEmailRange();" style="overflow-wrap: break-word;">
-    <html>
-    <head>
-        <script type="text/javascript">
+    <script type="text/javascript">
 
         var OpportunityId, clientUrl, statusCode;
         var globalObject = new Object();
 
         function getUrlParameters() {
             var queryString = location.search.substring(1);
+            queryString = decodeURIComponent(queryString)
             var params = {};
-            var queryStringParts = queryString.split("&amp;");
+            var queryStringParts = queryString.split("&");
             for (var i = 0; i < queryStringParts.length; i++) {
                 var pieces = queryStringParts[i].split("=");
                 params[pieces[0].toLowerCase()] = pieces.length === 1 ? null : decodeURIComponent(pieces[1]);
             }
-
             return params;
         }
 
         function getOpportunityStatus() {
-            debugger;
+            parent.$("h1[data-id='defaultDialogChromeTitle']", parent.document).html("");
+
             var oppId, statusReasons;
-            var parameters = getUrlParameters(); //GetGlobalContext().getQueryStringParameters().Data;
-            Xrm = parent.Xrm;
-            clientUrl = Xrm.Page.context.getClientUrl();
-            if (parameters != undefined) {
-                oppId = parameters.data.split('&amp;')[0].split('=')[1];
+            var params = getUrlParameters(); 
+            if (params != undefined) {
+                //oppId = parameters.data.split('&amp;')[0].split('=')[1];
+                oppId = params.oppid;
                 OpportunityId = oppId;
-                stepName = parameters.data.split('&amp;')[1].split('=')[1];
-                statusReasons = parameters.data.split('&amp;')[2].split('=')[1];
-                statusCode = parameters.data.split('&amp;')[3].split('=')[1];
+                //statusReasons = parameters.data.split('&amp;')[2].split('=')[1];
+                statusReasons = params.oppdetails;
+                //statusCode = parameters.data.split('&amp;')[3].split('=')[1];
+                statusCode = params.statuscode;
+                clientUrl = params.clienturl;
                 var myObject = JSON.parse(statusReasons);
                 globalObject = myObject;
 
@@ -42,49 +40,49 @@
                 }
 
                 var today = getTodayDate();
-				document.getElementById("dateValue").setAttribute("max", today);
-				document.getElementById("dateValue").setAttribute("value", today);
+                document.getElementById("dateValue").setAttribute("max", today);
+                document.getElementById("dateValue").setAttribute("value", today);
             }
         }
 
-		function getTodayDate(){
-			var today = new Date();
-			var dd = today.getDate();
-			var mm = today.getMonth()+1; //January is 0!
-			var yyyy = today.getFullYear();
-			if(dd<10){
-				dd='0'+dd
-			}
-			if(mm<10){
-				mm='0'+mm
-			}
-			today = yyyy+'-'+mm+'-'+dd;
-			return today;
-		}
+        function getTodayDate() {
+            var today = new Date();
+            var dd = today.getDate();
+            var mm = today.getMonth() + 1; //January is 0!
+            var yyyy = today.getFullYear();
+            if (dd < 10) {
+                dd = '0' + dd
+            }
+            if (mm < 10) {
+                mm = '0' + mm
+            }
+            today = yyyy + '-' + mm + '-' + dd;
+            return today;
+        }
 
         function closeOpportunity() {
-			var dateValue = document.getElementById("dateValue").value;
-			var selectedDate = new Date(dateValue);
-			var today = new Date();
+            var dateValue = document.getElementById("dateValue").value;
+            var selectedDate = new Date(dateValue);
+            var today = new Date();
 
-			var sdd = selectedDate.getDate();
-			var smm = selectedDate.getMonth()+1;
-			var syyyy = selectedDate.getFullYear();
+            var sdd = selectedDate.getDate();
+            var smm = selectedDate.getMonth() + 1;
+            var syyyy = selectedDate.getFullYear();
 
-			var tdd = today.getDate();
-			var tmm = today.getMonth()+1;
-			var tyyyy = today.getFullYear();
-			var validDate = 0;
+            var tdd = today.getDate();
+            var tmm = today.getMonth() + 1;
+            var tyyyy = today.getFullYear();
+            var validDate = 0;
 
-			if(isNaN(selectedDate)){
-				document.getElementById("dateValue").setCustomValidity("You have selected Invalid Date. Please enter a valid Date.");
-				return;
-			}
+            if (isNaN(selectedDate)) {
+                document.getElementById("dateValue").setCustomValidity("You have selected Invalid Date. Please enter a valid Date.");
+                return;
+            }
 
-			if((smm > tmm && syyyy >= tyyyy) || (syyyy > tyyyy) || (smm == tmm && syyyy == tyyyy && sdd > tdd)){
-			document.getElementById("dateValue").setCustomValidity("Date Value cannot be greater than today");
-				return;
-			}
+            if ((smm > tmm && syyyy >= tyyyy) || (syyyy > tyyyy) || (smm == tmm && syyyy == tyyyy && sdd > tdd)) {
+                document.getElementById("dateValue").setCustomValidity("Date Value cannot be greater than today");
+                return;
+            }
 
             var select = document.getElementById("reason");
             var parameters = {};
@@ -99,7 +97,7 @@
             var req = new XMLHttpRequest();
             req.open("POST",
                 clientUrl +
-                "/api/data/v8.2/opportunities(" +
+                "/api/data/v9.1/opportunities(" +
                 OpportunityId +
                 ")/Microsoft.Dynamics.CRM.arup_CloseOpportunity",
                 false);
@@ -120,144 +118,129 @@
 
         function closeDlg() {
             try {
-				//window.close();
-                closeWindow(true);
+                window.close();
             } catch (e) {
             }
         }
 
-        function cancelDlg() {
-            try {
-                closeWindow(true);
-            } catch (e) {
-            }
+    </script>
+    <script src="../../../../../../webresources/ClientGlobalContext.js.aspx" type="text/javascript"></script>
+    <script src="mag_/jquery1.8.3.min.js" type="text/javascript"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
         }
 
+        * {
+            box-sizing: border-box;
+        }
 
-        </script>
-        <script src="../../../../../../webresources/ClientGlobalContext.js.aspx" type="text/javascript"></script>
-        <script src="mag_/jquery1.8.3.min.js" type="text/javascript"></script>
+        input[type=text], select, textarea, input[type=date], input[type=number] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            resize: vertical;
+        }
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                font - family: Arial, Helvetica, sans-serif;
+        input[type=submit] {
+            background - color: #ffffff;
+            color: black;
+            padding: 6px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            border-color: #e7e7e7;
+        }
+
+            input[type=submit]:hover {
+                background-color: #e7e7e7;
             }
 
-            * {
-                box - sizing: border-box;
-            }
+        .container {
+            border-radius: 5px;
+            background-color: #ffffff;
+            padding: 20px;
+        }
 
-            input[type=text], select, textarea, input[type=date], input[type=number] {
-                width: 100%;
-                padding: 8px;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-                box-sizing: border-box;
-                margin-top: 6px;
-                margin-bottom: 16px;
-                resize: vertical;
-            }
+        label {
+            width: 150px;
+            text-align: right;
+        }
 
-            input[type=submit] {
-                background - color: #ffffff;
-                color: black;
-                padding: 6px 15px;
-                border-radius: 4px;
-                cursor: pointer;
-                border-color: #e7e7e7;
-            }
+        #dateValue {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            resize: vertical;
+        }
+    </style>
 
-                input[type=submit]:hover {
-                    background - color: #e7e7e7;
-                }
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+</head>
+<body onload="getOpportunityStatus();" style="overflow-wrap: break-word;" onfocusout="parent.setEmailRange();">
 
-            .container {
-                border - radius: 5px;
-                background-color: #ffffff;
-                padding: 20px;
-            }
+    <h3 style="color: #1B76D5; font-size: 25px;">Close Opportunity</h3>
+    <p style="font-family: undefined;">Provide the following information about why this opportunity is being closed.</p>
+    <div class="container" style="font-family: undefined;">
+        <form>
+            <label>Status Reason:</label>
+            <select required="" id="reason" name="reason">
+                <option selected="" disabled="" value="">Please Select</option>
+            </select>
 
-            label {
-                width: 150px;
-                text-align: right;
-            }
+            <label>Close Date:</label>
+            <input type="date" id="dateValue" required="" pattern="\d{4}-\d{2}-\d{2}">
 
-            #dateValue {
-                width: 100%;
-                padding: 8px;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-                box-sizing: border-box;
-                margin-top: 6px;
-                margin-bottom: 16px;
-                resize: vertical;
-            }
-        </style>
-
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-        <meta>
-    </head>
-    <body onload="getOpportunityStatus();" style="overflow-wrap: break-word;" onfocusout="parent.setEmailRange();">
-
-        <h3 style="color: #1B76D5; font-size: 25px;">Close Opportunity</h3>
-        <p style="font-family: undefined;">Provide the following information about why this opportunity is being closed.</p>
-        <div class="container" style="font-family: undefined;">
-            <form>
-                <label>Status Reason:</label>
-                <select required="" id="reason" name="reason">
-                    <option selected="" disabled="" value="">Please Select</option>
-                </select>
-
-                <label>Close Date:</label>
-                <input type="date" id="dateValue" required="" pattern="\d{4}-\d{2}-\d{2}">
-
-                <label>Description:</label>
-                <textarea id="description" name="subject" style="height:60px"></textarea>
-                <div align="right">
-                    <input type="submit" value="Ok" onclick="closeOpportunity();">
-                    <input type="submit" value="Cancel" onclick="cancelDlg();">
-                </div>
-            </form>
-        </div>
-
-
-
-    </body>
-</html>
+            <label>Description:</label>
+            <textarea id="description" name="subject" style="height:60px"></textarea>
+            <div align="right">
+                <input type="submit" value="Ok" onclick="closeOpportunity();">
+                <input type="submit" value="Cancel" onclick="closeDlg();">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
-</body></html></body></html>
