refactor to use ArupFieldConfig

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OppoWiz.html
@@ -35,6 +35,7 @@
             });
 
             // Set default values for all fields.
+            Arup_checkIsArupFieldConfig();
             Arup_setAllDefault();
             Arup_AddFocusOutValidationAll();
             // arup_AddOnChangeAll();
