updated ccrm_disciplines_name with new attribute name arup_disciplines

--- a/CrmPackage/WebResources/Web Page (HTML)/ccrm_duplicatebids.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/ccrm_duplicatebids.html
@@ -1,4 +1,4 @@
-<html><head>
+﻿<html><head>
     <script src="../../../../../../webresources/ClientGlobalContext.js.aspx" type="text/javascript"></script>
     <script src="ccrm_duplicatebid.js" type="text/javascript"></script>
     <script src="mag_/jquery1.8.3.min.js" type="text/javascript"></script>
@@ -65,92 +65,98 @@
                         <div style="float: left; padding-left: 20px">
                             <p>
                                 Disciplines : <select id="disciplines">
-                                    <option>No</option>
-                                    <option>	Acoustics	</option>
-                                    <option>	Airport Planning	</option>
-                                    <option>	Archaeology	</option>
-                                    <option>	Architecture	</option>
-                                    <option>	Art/Graphics/Model Making	</option>
-                                    <option>	Audio Visual Consultancy	</option>
-                                    <option>	Blast Engineering	</option>
-                                    <option>	Bridge Engineering	</option>
-                                    <option>	Building Physics	</option>
-                                    <option>	Building Services Engineering	</option>
-                                    <option>	Building Surveying	</option>
-                                    <option>	Cdm Co-Ordinator	</option>
-                                    <option>	Civil Engineering	</option>
-                                    <option>	Clerk Of Works	</option>
-                                    <option>	Commissioning Engineering	</option>
-                                    <option>	Communications	</option>
-                                    <option>	Computational Fluid Dynamics	</option>
-                                    <option>	Computing	</option>
-                                    <option>	Controls Engineering	</option>
-                                    <option>	Cost Surveying	</option>
-                                    <option>	Dam Engineering	</option>
-                                    <option>	Ecology Consultancy	</option>
-                                    <option>	Economics	</option>
-                                    <option>	Electrical Engineering	</option>
-                                    <option>	Electrification Of Transport	</option>
-                                    <option>	Elevators	</option>
-                                    <option>	Energy Consulting	</option>
-                                    <option>	Environmental Consultancy	</option>
-                                    <option>	Facade Engineering	</option>
-                                    <option>	Fire Engineering	</option>
-                                    <option>	Geological Engineering	</option>
-                                    <option>	Geomorphological Engineering	</option>
-                                    <option>	Geotechnical Engineering	</option>
-                                    <option>	Health &amp; Safety Consultancy	</option>
-                                    <option>	Highway Engineering	</option>
-                                    <option>	Hydrological Engineering	</option>
-                                    <option>	Industrial Engineering	</option>
-                                    <option>	Infrastructure	</option>
-                                    <option>	Interior / Furniture Design	</option>
-                                    <option>	Knowledge Management	</option>
-                                    <option>	Landscape Architecture	</option>
-                                    <option>	Leed Consultancy	</option>
-                                    <option>	Lighting Consultancy	</option>
-                                    <option>	Logistics	</option>
-                                    <option>	Management Consultancy	</option>
-                                    <option>	Maritime Engineering	</option>
-                                    <option>	Materials Engineering	</option>
-                                    <option>	Materials Handling Engineering	</option>
-                                    <option>	Mechanical Engineering	</option>
-                                    <option>	Naval Architecture	</option>
-                                    <option>	Nuclear Engineering	</option>
-                                    <option>	Oil &amp; Gas Engineering	</option>
-                                    <option>	Plumbing Engineering	</option>
-                                    <option>	Principal Contractor	</option>
-                                    <option>	Process Engineering- Chemical	</option>
-                                    <option>	Production Engineering	</option>
-                                    <option>	Programme Management	</option>
-                                    <option>	Project Information Management	</option>
-                                    <option>	Project Management	</option>
-                                    <option>	Project Planning	</option>
-                                    <option>	Public Health Engineering	</option>
-                                    <option>	Quantity Surveying	</option>
-                                    <option>	Railway Engineering	</option>
-                                    <option>	Research &amp; Development	</option>
-                                    <option>	Risk &amp; Safety Engineering	</option>
-                                    <option>	Security Consultancy	</option>
-                                    <option>	Seismic Engineering	</option>
-                                    <option>	Signalling	</option>
-                                    <option>	Software Product/Support	</option>
-                                    <option>	Stress Analysis	</option>
-                                    <option>	Structural Engineering	</option>
-                                    <option>	Sustainability Consultancy	</option>
-                                    <option>	Systems Engineering	</option>
-                                    <option>	Town &amp; Country Planning	</option>
-                                    <option>	Transportation	</option>
-                                    <option>	Tunnel Engineering	</option>
-                                    <option>	Urban Design	</option>
-                                    <option>	Urban Planning	</option>
-                                    <option>	Venue Consultancy	</option>
-                                    <option>	Vertical Transportation	</option>
-                                    <option>	Water Engineering	</option>
-                                    <option>	Way Finding	</option>
-                                    <option>	Wind Engineering	</option>
+    <option>No</option>
+    <option value="1">	Acoustics	</option>
+    <option value="35">	Airport Planning	</option>
+    <option value="67">	Archaeology	</option>
+    <option value="11">	Architecture	</option>
+    <option value="12">	Art/Graphics/Model Making	</option>
+    <option value="30">	Audio Visual Consultancy	</option>
+    <option value="32">	Blast Engineering	</option>
+    <option value="42">	Bridge Engineering	</option>
+    <option value="34">	Building Physics	</option>
+    <option value="10">	Building Services Engineering	</option>
+    <option value="68">	Building Surveying	</option>
+    <option value="48">	Cdm Co-Ordinator	</option>
+    <option value="7">	Civil Engineering	</option>
+    <option value="41">	Clerk Of Works	</option>
+    <option value="13">	Commissioning Engineering	</option>
+    <option value="49">	Communications	</option>
+    <option value="51">	Computational Fluid Dynamics	</option>
+    <option value="33">	Computing	</option>
+    <option value="14">	Controls Engineering	</option>
+    <option value="69">	Cost Surveying	</option>
+    <option value="72">	Dam Engineering	</option>
+    <option value="78">	Ecology Consultancy	</option>
+    <option value="52">	Economics	</option>
+    <option value="6">	Electrical Engineering	</option>
+    <option value="82">	Electrification Of Transport	</option>
+    <option value="74">	Elevators	</option>
+    <option value="15">	Energy Consulting	</option>
+    <option value="53">	Environmental Consultancy	</option>
+    <option value="54">	Facade Engineering	</option>
+    <option value="55">	Fire Engineering	</option>
+    <option value="770000001">	Geographic Information Systems	</option>
+    <option value="16">	Geological Engineering	</option>
+    <option value="17">	Geomorphological Engineering	</option>
+    <option value="56">	Geotechnical Engineering	</option>
+    <option value="36">	Health &amp; Safety Consultancy	</option>
+    <option value="40">	Highway Engineering	</option>
+    <option value="120">	Hydrogeology	</option>
+    <option value="27">	Hydrological Engineering	</option>
+    <option value="57">	Industrial Engineering	</option>
+    <option value="58">	Infrastructure	</option>
+    <option value="39">	Interior / Furniture Design	</option>
+    <option value="83">	Knowledge Management	</option>
+    <option value="66">	Landscape Architecture	</option>
+    <option value="73">	Leed Consultancy	</option>
+    <option value="65">	Lighting Consultancy	</option>
+    <option value="59">	Logistics	</option>
+    <option value="37">	Management Consultancy	</option>
+    <option value="63">	Maritime Engineering	</option>
+    <option value="18">	Materials Engineering	</option>
+    <option value="19">	Materials Handling Engineering	</option>
+    <option value="5">	Mechanical Engineering	</option>
+    <option value="770000000">	Municipal Advisory Consultancy	</option>
+    <option value="20">	Naval Architecture	</option>
+    <option value="76">	Nuclear Engineering	</option>
+    <option value="28">	Oil &amp; Gas Engineering	</option>
+    <option value="70">	Plumbing Engineering	</option>
+    <option value="47">	Principal Contractor	</option>
+    <option value="21">	Process Engineering- Chemical	</option>
+    <option value="22">	Production Engineering	</option>
+    <option value="81">	Programme Management	</option>
+    <option value="77">	Project Information Management	</option>
+    <option value="71">	Project Management	</option>
+    <option value="23">	Project Planning	</option>
+    <option value="8">	Public Health Engineering	</option>
+    <option value="2">	Quantity Surveying	</option>
+    <option value="29">	Railway Engineering	</option>
+    <option value="3">	Research &amp; Development	</option>
+    <option value="24">	Risk &amp; Safety Engineering	</option>
+    <option value="60">	Security Consultancy	</option>
+    <option value="61">	Seismic Engineering	</option>
+    <option value="46">	Signalling	</option>
+    <option value="75">	Software Product/Support	</option>
+    <option value="25">	Stress Analysis	</option>
+    <option value="4">	Structural Engineering	</option>
+    <option value="79">	Sustainability Consultancy	</option>
+    <option value="45">	Systems Engineering	</option>
+    <option value="62">	Town &amp; Country Planning	</option>
+    <option value="122">Traffic Engineering	</option>
+    <option value="121">Transport Planning	</option>
+    <option value="64">	Transportation	</option>
+    <option value="26">	Tunnel Engineering	</option>
+    <option value="80">	Urban Design	</option>
+    <option value="44">	Urban Planning	</option>
+    <option value="31">	Venue Consultancy	</option>
+    <option value="770000002">	Virtual & Visualisation	</option>
+    <option value="38">	Vertical Transportation	</option>
+    <option value="50">	Water Engineering	</option>
+    <option value="43">	Way Finding	</option>
+    <option value="9">	Wind Engineering	</option>
 
-                                </select>
+</select>
                             </p>
                         </div>
 
